# JustNeedThink

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 01-architecture.md  02-phase0-complete.md  03-phase1-complete.md  04-phase2-complete.md  bug-fix-log.md  known-issues.md  memory.md  pending-features.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: permission-mcp.js
src-tauri/src/: error.rs  lib.rs  permission.rs
src-tauri/src/agent/: message_bus.rs  mod.rs  monitor.rs  registry.rs  team.rs
src-tauri/src/cli/: env_builder.rs  mod.rs  process_manager.rs  resolver.rs  stdin_manager.rs
src-tauri/src/commands/: builtin.rs
src-tauri/src/credit/: alert.rs  mod.rs  tracker.rs  usage_stats.rs
src-tauri/src/db/: mod.rs  project_repo.rs  schema.rs  session_repo.rs
src-tauri/src/filesystem/: mod.rs  ops.rs  tree.rs  watcher.rs
src-tauri/src/project/: git.rs  mod.rs  registry.rs  workspace.rs
src-tauri/src/session/: lifecycle.rs  list.rs  mod.rs
src-tauri/src/skill/: loader.rs
src-tauri/src/stream/: mod.rs  parser.rs  protocol.rs  session_bridge.rs
src-tauri/src/utils/: ansi.rs  mod.rs  platform.rs
src-tauri/src/workflow/: context.rs  engine.rs  mod.rs  steps.rs
src/components/agents/: AgentPanel.tsx
src/components/chat/: ChatPanel.tsx  (+2 more)
src/hooks/: useStreamProcessor.ts
src/lib/: tauri-bridge.ts
src/stores/: agentStore.ts  chatStore.ts  commandStore.ts  creditStore.ts  fileStore.ts  projectStore.ts  skillStore.ts  workflowStore.ts
(+8 files in other folders)
