[package]
name = "justneedthink"
version = "0.1.0"
description = "JustNeedThink - A Claude Code GUI Desktop App"
authors = [""]
license = "Apache-2.0"
repository = "https://github.com/this1is1i/JustNeedThink"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
rand = "0.8"
log = "0.4"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"
